align issue fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .card-item{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .card-title{
     text-align: center;
@@ -10,4 +10,5 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
 }
